--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "eslint-config-next": "13.2.4",
     "framer-motion": "^10.9.1",
     "next": "13.2.4",
+    "next-auth": "^4.22.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   }
