--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "next": "13.2.4",
     "next-auth": "^4.22.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "prisma": "^4.12.0"
